--- a/app/src/main/res/layout/counter_widget.xml
+++ b/app/src/main/res/layout/counter_widget.xml
@@ -7,8 +7,8 @@
     <TextView
         android:id="@+id/appwidget_text"
         style="@style/Widget.WUFService.AppWidget.InnerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_margin="8dp"
